--------------------------------------------------------------------------------------------------
Release notes version 1.9.7_beta : Enhancements, modifications and corrected bugs since version 1.9.6 :
--------------------------------------------------------------------------------------------------
11/07/25 (TRUST) Tools        : In addition to LATA and MED plugins, VisIt installed in TRUST can read CGNS format on some platforms
11/07/25 (TRUST) New keyword  : Singular loss pressure eps option should be replaced by alpha option for regul keyword (to be coherent with Flica5)
11/07/25 (TRUST) GPU          : Add a new fast direct solver limited to a single Nvidia GPU: cuDSS LU|Cholesky { [algo int] [impr] }
01/07/25 (TRUST) Bug fixed    : Crash in parallel during a Pb_multiphase simulation when elimination in SETS scheme failed
01/07/25 (TRUST) Bug fixed    : Crash for Front Tracking simulation with time-dependent velocity boundary condition in VDF
--------------------------------------------------------------------------------------------------
Release notes version 1.9.6 : Enhancements, modifications and corrected bugs since version 1.9.5 :
--------------------------------------------------------------------------------------------------
06/05/25 (TRUST) Keyword      : Schema_Euler_Explicite: advanced 'facsec' usage (with options facsec_ini, etc.) is now accessible through attribute 'facsec_expert'. facsec as a parser expression accessible with 'facsec_func'.
05/05/25 (TRUST) New feature  : Convection/Diffusion contributions for all species are added to a seperate .out file when using the mass source term in a weakly-compressible simulation.
05/05/25 (TRUST) New feature  : Integration of the IMUSIG algorithm from Baltik SCONE considering a constant Sauter diameter per class
25/04/25 (TRUST) GPU          : Several VEF source terms ported (constituant and puissance_thermique for incompressible/quasi-compressible flows)