@@ -1,36 +1,36 @@
 Statistiques d'initialisation du calcul
 
-Temps total                       48.2107
+Temps total                       44.9261
 
 Statistiques de resolution du probleme
 
-Temps total                       10.0105
+Temps total                       8.83935
 
 
 Timesteps                         10
-Secondes / pas de temps           1.00104
-Dont solveurs Ax=B                0.289786 28% (2 appels/pas de temps)
-Dont solveur diffusion_implicite  0.044863  4% (4 appels/pas de temps)
-Dont assemblage matrice_implicite 0.080953  8% (4 appels/pas de temps)
-Dont mettre_a_jour                0.128271 12% (4 appels/pas de temps)
-Dont operateurs convection        0.195128 19% (9.6 appels/pas de temps)
-Dont operateurs diffusion         0.065772  6% (18 appels/pas de temps)
-Dont operateurs gradient          0.039589  3% (5 appels/pas de temps)
-Dont operateurs divergence        0.033316  3% (6 appels/pas de temps)
-Dont operateurs source            0.005849  0% (4 appels/pas de temps)
-Dont operations postraitement     0.041224  4% (1 appel/pas de temps)
-Dont calcul dt                    0.029983  2% (6 appels/pas de temps)
-Dont calcul divers                0.046306  4% (0 appels/pas de temps)
+Secondes / pas de temps           0.883927
+Dont solveurs Ax=B                0.173209 19% (2 appels/pas de temps)
+Dont solveur diffusion_implicite  0.044979  5% (4 appels/pas de temps)
+Dont assemblage matrice_implicite 0.081346  9% (4 appels/pas de temps)
+Dont mettre_a_jour                0.124825 14% (4 appels/pas de temps)
+Dont operateurs convection        0.194497 22% (9.6 appels/pas de temps)
+Dont operateurs diffusion         0.065447  7% (18 appels/pas de temps)
+Dont operateurs gradient          0.039471  4% (5 appels/pas de temps)
+Dont operateurs divergence        0.033184  3% (6 appels/pas de temps)
+Dont operateurs source            0.005980  0% (4 appels/pas de temps)
+Dont operations postraitement     0.044863  5% (1 appel/pas de temps)
+Dont calcul dt                    0.029842  3% (6 appels/pas de temps)
+Dont calcul divers                0.046282  5% (0 appels/pas de temps)
 Nb solveur / pas de temps         2
-Secondes / solveur                0.144893
-Iterations / solveur              48.2
+Secondes / solveur                0.0866047
+Iterations / solveur              21.6
 GPU statistics per time step (experimental):
-Libraries : 0.289283 s 28.9%  2.0 calls
-Kernels   : 0.607826 s 60.7% 1098.1 calls
-Copy H2D  : 0.034652 s  3.5% 56.9 calls  8.2 GB/s
-Copy D2H  : 0.003075 s  0.3% 45.2 calls 10.2 GB/s
-Alloc/Free: 0.004371 s  0.4% 46.3 calls
-GPU: 89.6% Copy H<->D: 3.7% Alloc/Free: 0.4% Comm: 0% CPU & Others: 6.1%
+Libraries : 0.172696 s 19.5%  2.0 calls
+Kernels   : 0.607455 s 68.7% 1098.1 calls
+Copy H2D  : 0.030542 s  3.5% 56.9 calls  9.3 GB/s
+Copy D2H  : 0.002934 s  0.3% 45.2 calls 10.7 GB/s
+Alloc/Free: 0.004876 s  0.6% 46.3 calls
+GPU: 88.2% Copy H<->D: 3.7% Alloc/Free: 0.5% Comm: 0% CPU & Others: 7.4%
 I/O:
 
 Timesteps = number of time steps
@@ -49,5 +49,5 @@ Communications > 30%    => too many processors or network too slow
 
 Statistiques de post resolution
 
-Temps total                       0.926863
+Temps total                       0.870706
 
