@@ -1,33 +1,33 @@
 Statistiques d'initialisation du calcul
 
-Temps total                       35.8363
+Temps total                       36.5371
 
 Statistiques de resolution du probleme
 
-Temps total                       1.88624
+Temps total                       1.57927
 
 
 Timesteps                         10
-Secondes / pas de temps           0.188621
-Dont solveurs Ax=B                0.092387 48% (1 appel/pas de temps)
-Dont mettre_a_jour                0.013827  7% (1 appel/pas de temps)
-Dont operateurs convection        0.026175 13% (1 appel/pas de temps)
-Dont operateurs diffusion         0.004930  2% (1 appel/pas de temps)
-Dont operateurs gradient          0.018916 10% (2 appels/pas de temps)
-Dont operateurs divergence        0.014481  7% (2 appels/pas de temps)
-Dont operations postraitement     0.002277  1% (1 appel/pas de temps)
-Dont calcul dt                    0.008934  4% (2 appels/pas de temps)
-Dont calcul divers                0.006693  3% (0 appels/pas de temps)
+Secondes / pas de temps           0.157924
+Dont solveurs Ax=B                0.061993 39% (1 appel/pas de temps)
+Dont mettre_a_jour                0.013350  8% (1 appel/pas de temps)
+Dont operateurs convection        0.026535 16% (1 appel/pas de temps)
+Dont operateurs diffusion         0.004961  3% (1 appel/pas de temps)
+Dont operateurs gradient          0.019048 12% (2 appels/pas de temps)
+Dont operateurs divergence        0.013385  8% (2 appels/pas de temps)
+Dont operations postraitement     0.002303  1% (1 appel/pas de temps)
+Dont calcul dt                    0.008951  5% (2 appels/pas de temps)
+Dont calcul divers                0.007399  4% (0 appels/pas de temps)
 Nb solveur / pas de temps         1
-Secondes / solveur                0.0923873
-Iterations / solveur              25.6
+Secondes / solveur                0.0619929
+Iterations / solveur              12.4
 GPU statistics per time step (experimental):
-Libraries : 0.092100 s 48.8%  1.0 calls
-Kernels   : 0.090306 s 47.9% 139.2 calls
-Copy H2D  : 0.000834 s  0.4% 10.6 calls 11.4 GB/s
-Copy D2H  : 0.000310 s  0.2%  2.0 calls 12.0 GB/s
-Alloc/Free: 0.000105 s  0.1%  1.3 calls
-GPU: 96.7% Copy H<->D: 0.6% Alloc/Free: 0% Comm: 0% CPU & Others: 2.6%
+Libraries : 0.061698 s 39.1%  1.0 calls
+Kernels   : 0.089829 s 56.9% 139.2 calls
+Copy H2D  : 0.000906 s  0.6% 10.6 calls 10.4 GB/s
+Copy D2H  : 0.000323 s  0.2%  2.0 calls 11.5 GB/s
+Alloc/Free: 0.000121 s  0.1%  1.3 calls
+GPU: 95.9% Copy H<->D: 0.7% Alloc/Free: 0% Comm: 0% CPU & Others: 3.1%
 I/O:
 
 Timesteps = number of time steps
@@ -46,5 +46,5 @@ Communications > 30%    => too many processors or network too slow
 
 Statistiques de post resolution
 
-Temps total                       0.059868
+Temps total                       0.060954
 
