@@ -1,36 +1,36 @@
 Statistiques d'initialisation du calcul
 
-Temps total                       34.0491
+Temps total                       34.5779
 
 Statistiques de resolution du probleme
 
-Temps total                       8.47514
+Temps total                       7.03998
 
 
 Timesteps                         10
-Secondes / pas de temps           0.847507
-Dont solveurs Ax=B                0.333036 39% (2 appels/pas de temps)
-Dont solveur diffusion_implicite  0.065202  7% (4 appels/pas de temps)
-Dont mettre_a_jour                0.016239  1% (1 appel/pas de temps)
-Dont operateurs convection        0.104737 12% (4 appels/pas de temps)
-Dont operateurs diffusion         0.142443 16% (26 appels/pas de temps)
-Dont operateurs gradient          0.034197  4% (4 appels/pas de temps)
-Dont operateurs divergence        0.019878  2% (3 appels/pas de temps)
-Dont operateurs source            0.053902  6% (2 appels/pas de temps)
-Dont operations postraitement     0.005281  0% (1 appel/pas de temps)
-Dont calcul dt                    0.048477  5% (8 appels/pas de temps)
-Dont modele turbulence            0.006516  0% (1 appel/pas de temps)
-Dont calcul divers                0.017597  2% (0 appels/pas de temps)
+Secondes / pas de temps           0.703991
+Dont solveurs Ax=B                0.193872 27% (2 appels/pas de temps)
+Dont solveur diffusion_implicite  0.064559  9% (4 appels/pas de temps)
+Dont mettre_a_jour                0.014819  2% (1 appel/pas de temps)
+Dont operateurs convection        0.104234 14% (4 appels/pas de temps)
+Dont operateurs diffusion         0.142014 20% (26 appels/pas de temps)
+Dont operateurs gradient          0.033977  4% (4 appels/pas de temps)
+Dont operateurs divergence        0.018184  2% (3 appels/pas de temps)
+Dont operateurs source            0.053444  7% (2 appels/pas de temps)
+Dont operations postraitement     0.005502  0% (1 appel/pas de temps)
+Dont calcul dt                    0.048605  6% (8 appels/pas de temps)
+Dont modele turbulence            0.005877  0% (1 appel/pas de temps)
+Dont calcul divers                0.018903  2% (0 appels/pas de temps)
 Nb solveur / pas de temps         2
-Secondes / solveur                0.166518
-Iterations / solveur              51.5
+Secondes / solveur                0.0969359
+Iterations / solveur              22
 GPU statistics per time step (experimental):
-Libraries : 0.332501 s 39.2%  2.0 calls
-Kernels   : 0.478983 s 56.5% 858.6 calls
-Copy H2D  : 0.021207 s  2.5% 22.8 calls  9.3 GB/s
-Copy D2H  : 0.005416 s  0.6%  9.3 calls  9.1 GB/s
-Alloc/Free: 0.000678 s  0.1%  8.0 calls
-GPU: 95.7% Copy H<->D: 3.1% Alloc/Free: 0% Comm: 0% CPU & Others: 1%
+Libraries : 0.193333 s 27.5%  2.0 calls
+Kernels   : 0.477319 s 67.8% 858.6 calls
+Copy H2D  : 0.017805 s  2.5% 22.8 calls 11.0 GB/s
+Copy D2H  : 0.005815 s  0.8%  9.3 calls  8.5 GB/s
+Alloc/Free: 0.000838 s  0.1%  8.0 calls
+GPU: 95.2% Copy H<->D: 3.3% Alloc/Free: 0.1% Comm: 0% CPU & Others: 1.2%
 I/O:
 
 Timesteps = number of time steps
@@ -49,5 +49,5 @@ Communications > 30%    => too many processors or network too slow
 
 Statistiques de post resolution
 
-Temps total                       0.251529
+Temps total                       0.076159
 
