@@ -1,36 +1,36 @@
 Statistiques d'initialisation du calcul
 
-Temps total                       6.84439
+Temps total                       6.51639
 
 Statistiques de resolution du probleme
 
-Temps total                       0.86675
+Temps total                       0.614433
 
 
 Timesteps                         3
-Secondes / pas de temps           0.288912
-Dont solveurs Ax=B                0.164707 57% (2 appels/pas de temps)
-Dont solveur diffusion_implicite  0.010085  3% (4 appels/pas de temps)
-Dont assemblage matrice_implicite 0.034365 11% (4 appels/pas de temps)
-Dont mettre_a_jour                0.005709  1% (4 appels/pas de temps)
-Dont operateurs convection        0.029027 10% (6 appels/pas de temps)
-Dont operateurs diffusion         0.014672  5% (18 appels/pas de temps)
-Dont operateurs gradient          0.005336  1% (5 appels/pas de temps)
-Dont operateurs divergence        0.004198  1% (5.66667 appels/pas de temps)
-Dont operateurs source            0.002226  0% (4 appels/pas de temps)
-Dont operations postraitement     0.003986  1% (1 appel/pas de temps)
-Dont calcul dt                    0.004683  1% (6 appels/pas de temps)
-Dont calcul divers                0.009914  3% (0 appels/pas de temps)
+Secondes / pas de temps           0.204804
+Dont solveurs Ax=B                0.075454 36% (2 appels/pas de temps)
+Dont solveur diffusion_implicite  0.010194  4% (4 appels/pas de temps)
+Dont assemblage matrice_implicite 0.035048 17% (4 appels/pas de temps)
+Dont mettre_a_jour                0.005450  2% (4 appels/pas de temps)
+Dont operateurs convection        0.032451 15% (6 appels/pas de temps)
+Dont operateurs diffusion         0.015140  7% (18 appels/pas de temps)
+Dont operateurs gradient          0.005309  2% (5 appels/pas de temps)
+Dont operateurs divergence        0.004182  2% (5.66667 appels/pas de temps)
+Dont operateurs source            0.002243  1% (4 appels/pas de temps)
+Dont operations postraitement     0.004320  2% (1 appel/pas de temps)
+Dont calcul dt                    0.004801  2% (6 appels/pas de temps)
+Dont calcul divers                0.010211  4% (0 appels/pas de temps)
 Nb solveur / pas de temps         2
-Secondes / solveur                0.0823533
-Iterations / solveur              72
+Secondes / solveur                0.0377268
+Iterations / solveur              32
 GPU statistics per time step (experimental):
-Libraries : 0.164529 s 56.9%  2.0 calls
-Kernels   : 0.082871 s 28.7% 885.3 calls
-Copy H2D  : 0.006241 s  2.2% 40.0 calls 13.4 GB/s
-Copy D2H  : 0.000629 s  0.2% 10.7 calls  8.3 GB/s
-Alloc/Free: 0.003693 s  1.3% 57.7 calls
-GPU: 85.6% Copy H<->D: 2.3% Alloc/Free: 1.2% Comm: 0% CPU & Others: 10.7%
+Libraries : 0.075280 s 36.8%  2.0 calls
+Kernels   : 0.084917 s 41.5% 885.3 calls
+Copy H2D  : 0.007293 s  3.6% 40.0 calls 11.4 GB/s
+Copy D2H  : 0.000588 s  0.3% 10.7 calls  8.9 GB/s
+Alloc/Free: 0.004410 s  2.2% 57.7 calls
+GPU: 78.2% Copy H<->D: 3.8% Alloc/Free: 2.1% Comm: 0% CPU & Others: 15.7%
 I/O:
 
 Timesteps = number of time steps
@@ -49,5 +49,5 @@ Communications > 30%    => too many processors or network too slow
 
 Statistiques de post resolution
 
-Temps total                       0.092952
+Temps total                       0.133982
 
