@@ -1,3 +1,4 @@
+XX/XX/25 (TRUST) Solver       : AMG wrapper solver detect block-structure matrix in VEF, which dramatically improves convergence, especially on meshes with high amplitude for cell volumes
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.7_beta : Enhancements, modifications and corrected bugs since version 1.9.6 :
 --------------------------------------------------------------------------------------------------
